Fix file spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,3 @@
 .file-view {
     grid-area: file-view;
 }
-
-.file-content {
-    margin-top: 10px;
-}
